Switched to use app id

--- a/comments-plugin.html
+++ b/comments-plugin.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <meta property="fb:admins" content="1135320227"/>
+    <meta property="fb:app_id" content="921844385436868"/>
 </head>
 <body>
 
