--- a/comments-plugin.html
+++ b/comments-plugin.html
@@ -11,7 +11,7 @@
 
 
 
-       <div class="fb-comments" data-href="https://aaronmichalczuk.github.io/"
+       <div class="fb-comments" data-href="https://aaronmichalczuk.github.io/comments-plugin.html"
         data-numposts="5" data-width=""></div>
 
 </body>
